# ClipFix

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clipfix.wpr  pyproject.toml
src/clipfix/: __init__.py
