[project]
name = "clipfix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Steve Barnes", email = "gadgetsteve@hotmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "pyclip>=0.7.0",
]

[project.scripts]
clipfix = "clipfix:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
