# Copyright 2025 Steve Barnes gadgetsteve@hotmail.com

[project]
name = "clipfix"
#version = "0.1.0"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Steve Barnes", email = "gadgetsteve@hotmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "pyclip>=0.7.0",
]

[project.scripts]
clipfix = "clipfix:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
